marking the areos where errors may occur

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <div class="header">
+   
+
+  <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -20,11 +22,13 @@
                     <a href="#online-reputation-management">Online Reputation Management</a>
                 </li>
                 <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
+                    <a href="#social-media-marketing">Social Media Marketing</a> <!-- fix this link its not working-->
                 </li>
             </ul>
         </div>
     </div>
+
+
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
@@ -78,6 +82,8 @@
     <p>  &copy; 2019 Horiseon Social Solution Services, Inc.</p>
         
     </footer>
+   
+    <!-- delted this div as it wasnt the right way too add a foote-->
     <!--<div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
