work done for today so saving for backup

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
    
-
+<!--do a head tag or a nav bar -->
   <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -83,7 +83,7 @@
         
     </footer>
    
-    <!-- delted this div as it wasnt the right way too add a foote-->
+    <!-- Deleted this div as it wasn't the right way too add a footer-->
     <!--<div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
