added a header and nav

--- a/index.html
+++ b/index.html
@@ -10,8 +10,33 @@
 
 <body>
    
-<!--do a head tag or a nav bar -->
-  <div class="header">
+<!--Added a header and nav as this is semantic tag in how to add a header and nav  -->
+<header>
+    <h1>Hori<span class="seo">seo</span>n</h1>
+
+
+    <nav>
+        <!-- Main Navigation inside <header> -->
+        
+            <div>
+                <ul>
+                    <li>
+                        <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    </li>
+                    <li>
+                        <a href="#online-reputation-management">Online Reputation Management</a>
+                    </li>
+                    <li>
+                        <a href="#social-media-marketing">Social Media Marketing</a> <!-- fix this link its not working-->
+                </li>
+                </ul>
+            </div>
+    </nav>
+    </header>
+
+
+
+  <!--<div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -23,10 +48,10 @@
                 </li>
                 <li>
                     <a href="#social-media-marketing">Social Media Marketing</a> <!-- fix this link its not working-->
-                </li>
+               <!--</li>
             </ul>
         </div>
-    </div>
+    </div>-->
 
 
     <div class="hero"></div>
