--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
 <section>
  <div class="hero"></div> <!-- CHANGE THIS-->
 </section>
+
+
     <main class = "content"> 
        <section class= "element">
     <!-- Implemented a section Used to bring together stuff that is thematically relevant. It appears to be a div element, but it isn't. The div has no meaning in terms of semantics.-->
 
         <article id ="search-engine-optimization" >
     <!--Implemented an article tag as it semantically mark the main content section or sections of a page-->
-            <img src="./assets/images/search-engine-optimization.jpg"  alt= "search-optimization" class="float-left" /> <!-- added an alt--><!-- add figure element to picutes-->
+            <img src="./assets/images/search-engine-optimization.jpg"  alt= "Book with SEO description on a page" class="float-left" /> <!-- added an alt-->
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -51,7 +53,7 @@
         </article>
 
         <article id="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt= "Reputation-management" class="float-right" /> <!-- added an alt--><!-- add figure element to picutes-->
+            <img src="./assets/images/online-reputation-management.jpg" alt="A laptop with reputation on and showing an increase" class="float-right" /> <!-- added an alt-->
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -59,7 +61,7 @@
         </article>
 
         <article id="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="social-media" class="float-left" /> <!-- added an alt--><!-- add figure element to picutes-->
+            <img src="./assets/images/social-media-marketing.jpg" alt="Types of social media marking in a picture" class="float-left" /> <!-- added an alt--><!-- add figure element to picutes-->
             <h2>Social Media Marketing</h2>
               <p>
                   Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -72,16 +74,16 @@
                  <section class="benefit-lead">
             <!-- I have implemented aside as ......... -->
                 <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" alt= "generation"/>  <!-- added an alt--> <!-- add figure element to picutes-->
+                <img src="./assets/images/lead-generation.png" alt= "Increase-Money"/>  <!-- added an alt--> 
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
                 </section>
 
               <section class ="benefit-brand">
-    
+    b
                     <h3>Brand Awareness</h3>
-                    <img src="./assets/images/brand-awareness.png"  alt="brandAwareness" /> <!-- added an alt-->   <!-- add figure element to picutes-->
+                    <img src="./assets/images/brand-awareness.png"  alt="Lightbulb flashing" /> <!-- added an alt-->   
                  <p>
                         Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                     </p>
@@ -90,7 +92,7 @@
               <section class ="benefit-cost">
             
                     <h3>Cost Management</h3>
-                    <img src="./assets/images/cost-management.png"  alt="cost" /> <!-- added an alt-->  <!-- add figure element to picutes-->
+                    <img src="./assets/images/cost-management.png"  alt="Money" /> <!-- added an alt-->  <!-- add figure element to picutes-->
                   <p>
                         As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                     </p>
