--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
     </nav>
     </header>
 
-<section>
- <div class="hero"></div> <!-- CHANGE THIS-->
+
+<section >
+ <div class="hero"></div> 
 </section>
 
     <main class = "content"> 
@@ -97,8 +98,6 @@
                     </p>
                 </section>
               </aside>
-         
-
        
     <footer > <!-- added a footer div class was used which isn't the right way to add a footer-->
     <h4>Made with ❤️️ by Horiseon</h4>
